feat: Scala Flink processor with enrichment working

--- a/flink/Dockerfile
+++ b/flink/Dockerfile
@@ -16,7 +16,7 @@ WORKDIR /app
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY process_engagement.py .
+COPY *.py .
 
 # Set environment for PyFlink
 ENV FLINK_HOME=/opt/flink
