feat: Scala Flink processor is connected with redis sink

--- a/flink-scala/pom.xml
+++ b/flink-scala/pom.xml
@@ -70,6 +70,13 @@
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.36</version>
         </dependency>
+        
+        <!-- Redis Client -->
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+            <version>3.3.0</version>
+        </dependency>
     </dependencies>
 
     <build>
