--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -151,6 +151,8 @@ services:
         condition: service_healthy
       postgresql:
         condition: service_healthy
+      redis:
+        condition: service_healthy
     environment:
       KAFKA_BOOTSTRAP_SERVERS: kafka:29092
       POSTGRES_HOST: ${POSTGRES_HOST}
@@ -158,6 +160,8 @@ services:
       POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      REDIS_HOST: redis
+      REDIS_PORT: 6379
     networks:
       - streaming-network
 
