Add README with configuration guide
- added monitor and stress test
- Add quick start guide with run.sh automation
- Include load testing instructions with configurable stress patterns
- Document .env configuration options for performance tuning
- Add troubleshooting section for BigQuery emulator issues
- Explain multi-sink fan-out with Kafka, Debezium, and Flink

--- a/.env
+++ b/.env
@@ -1,11 +1,55 @@
-# PostgreSQL Configuration
+# Flink Performance Configuration
+FLINK_PARALLELISM=12
+CHECKPOINT_INTERVAL_MS=30000
+KAFKA_SOURCE_PARALLELISM=4
+PROCESSING_PARALLELISM=8
+MONITORING_SAMPLE_RATE=1
+
+# Sink Parallelism
+REDIS_SINK_PARALLELISM=6
+BIGQUERY_SINK_PARALLELISM=3
+ELASTICSEARCH_SINK_PARALLELISM=4
+
+# Kafka Optimization
+KAFKA_FETCH_MIN_BYTES=1048576
+KAFKA_FETCH_MAX_WAIT_MS=500
+KAFKA_MAX_PARTITION_FETCH_BYTES=2097152
+KAFKA_RECEIVE_BUFFER_BYTES=1048576
+
+# Redis Sink Configuration
+REDIS_BATCH_SIZE=500
+REDIS_FLUSH_INTERVAL_MS=500
+REDIS_MAX_BUFFER_SIZE=5000
+REDIS_POOL_MAX_TOTAL=20
+REDIS_POOL_MAX_IDLE=10
+REDIS_POOL_MIN_IDLE=2
+REDIS_POOL_TIMEOUT_MS=5000
+REDIS_UPDATE_STATS_FREQUENCY=10
+
+# BigQuery Sink Configuration
+BIGQUERY_BATCH_SIZE=1000
+BIGQUERY_FLUSH_INTERVAL_MS=8000
+BIGQUERY_MAX_BUFFER_SIZE=10000
+BIGQUERY_CONNECTION_TIMEOUT_MS=3000
+BIGQUERY_READ_TIMEOUT_MS=10000
+
+# Elasticsearch Sink Configuration
+ELASTICSEARCH_BATCH_SIZE=1000
+ELASTICSEARCH_FLUSH_INTERVAL_MS=5000
+ELASTICSEARCH_MAX_BUFFER_SIZE=10000
+ELASTICSEARCH_CONNECTION_TIMEOUT_MS=5000
+ELASTICSEARCH_READ_TIMEOUT_MS=15000
+ELASTICSEARCH_INDEX_SHARDS=1
+ELASTICSEARCH_INDEX_REPLICAS=0
+
+# Generator Configuration 
+EVENT_INTERVAL_SECONDS=1.0
+BATCH_SIZE=100
+
+# Database Configuration
+POSTGRES_HOST=postgresql
+POSTGRES_PORT=5432
 POSTGRES_DB=streaming_db
 POSTGRES_USER=streaming_user
 POSTGRES_PASSWORD=streaming_pass
-POSTGRES_HOST=postgresql
-POSTGRES_PORT=5432
-
-# Generator Configuration
 CONTENT_ROWS=5000
-EVENT_INTERVAL_SECONDS=0.5
-BATCH_SIZE=50
